changed the URL for the script.js resource

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 
-<script src="https://kwagu14.github.io/script.js" type="text/javascript"></script>
+<script src="https://kwaguespack.github.io/script.js" type="text/javascript"></script>
 
 </body>
 </html>
