added the STC logo and changed the header banner

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <body>
 
+<img id="logo" src="JUST_STC.jpg" alt="STC Logo" width="300">
+
 <div id= "heading">
     <div id="header-banner"><p style="margin-top: 25; font-size: 40">QR Code Scanner</p></div>
     <p id ="subtitle">Aim the camera at a QR code to begin scanning.</p>
