removed break tag from warning message and changed the order of the elements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <canvas id="qr-canvas"></canvas>
 </div>
 
-<p id="warning-message">Warning: this scanner was made to demonstrate that JavaScript injection is possible with QR codes.<br>This scanner has vulnerabilities built inside. Please take caution.</p>
+<p id="warning-message">Warning: This scanner was made to demonstrate that JavaScript injection is possible with QR codes and contains vulnerabilities. Please take caution.</p>
 
 <!-- <div id="video-container">
     <video id="video-window" autoplay loop></video>
