removed floating quotation mark

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a id= "qr-link" style="text-align:center;"></a><br>
     <div style="text-align:center;">
         <button id= "scan-button" onclick="startScan()"> Scan Another Code</button>
-    </div>"
+    </div>
 
 </div>
 
