removed the div around the button since using flexbox to center

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- the result gets put in here if it is preceded by http://, https:// or www.-->
     <a id= "qr-link" style="text-align:center;"></a><br>
     
-    <div style="text-align:center;">
+    <div id="button-container" style="text-align:center;">
         <button id= "scan-button" onclick="startScan()"> Scan Another Code</button>
     </div>
 
