--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
 
 <div id= "scan-result">
-    <p id= "qr-text-label">QR code Result: </p>
+    <p id= "qr-text-label" style="text-align:center;">QR code Result: </p>
     <!-- the result gets put in this tag if it is not preceded by "http:// or https:// or www."-->
-    <p id= "qr-text"></p>
+    <p id= "qr-text" style="text-align:center;"></p>
     <!-- the result gets put in here if it is preceded by http://, https:// or www.-->
-    <a id= "qr-link"></a><br>
+    <a id= "qr-link" style="text-align:center;"></a><br>
     <button id= "scan-button" onclick="startScan()"> Scan Another Code</button>
 
 </div>
