--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <p id= "qr-text" style="text-align:center;"></p>
     <!-- the result gets put in here if it is preceded by http://, https:// or www.-->
     <a id= "qr-link" style="text-align:center;"></a><br>
-    <button id= "scan-button" onclick="startScan()"> Scan Another Code</button>
+    <div id="button-container" style="text-align:center;">
+        <button id= "scan-button" onclick="startScan()"> Scan Another Code</button>
+    </div>
 
 </div>
 
